syntax = "proto3";

package proto_catalogue_serialization;

message String_color{
string color = 1;
}

message RGB_color{
uint32 red = 1;
uint32 green = 2;
uint32 blue = 3;
}

message RGBA_color{
uint32 red = 1;
uint32 green = 2;
uint32 blue = 3;
double opacity = 4;
}

message Color{

String_color string_color = 1;
RGB_color RGB = 2;
RGBA_color RGBA = 3; 

}

message Point{

double x = 1;
double y = 2;
}
